Completed HW 4 and fixed conflicts

--- a/index.Rmd
+++ b/index.Rmd
@@ -24,4 +24,8 @@ knitr::opts_chunk$set(echo = TRUE)
 <br/>
 [R problems](HW-4.html)
 
+**Homework #4**
+<br/>
+[Matrices, Lists, Data Frames](HW-5.html)
+
 
