--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,11 @@ author: "Lily Shapiro"
 date: "Spring 2020"
 output: html_document
 ---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
 ## R Portfolio 
 
 **Homework #1**     
